<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar_view">

    <CalendarView
        android:id="@+id/calendar_screen_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calendar_screen_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/calendar_screen_country"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_screen_calendar" />

    <TextView
        android:id="@+id/calendar_screen_confirmed_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/calendar_screen_confirmed_txt"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_screen_country"
        app:layout_constraintTop_toBottomOf="@+id/calendar_screen_country" />

    <TextView
        android:id="@+id/calendar_screen_deaths_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/calendar_screen_deaths_txt"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_screen_country"
        app:layout_constraintTop_toBottomOf="@+id/calendar_screen_confirmed_txt" />

    <TextView
        android:id="@+id/calendar_screen_recovered_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/calendar_screen_recovered_txt"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_screen_country"
        app:layout_constraintTop_toBottomOf="@+id/calendar_screen_deaths_txt" />

    <TextView
        android:id="@+id/calendar_screen_confirmed_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/calendar_screen_confirmed_nb"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_screen_confirmed_txt"
        app:layout_constraintTop_toTopOf="@+id/calendar_screen_confirmed_txt" />

    <TextView
        android:id="@+id/calendar_screen_deaths_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/calendar_screen_deaths_nb"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_screen_deaths_txt"
        app:layout_constraintTop_toTopOf="@+id/calendar_screen_deaths_txt" />

    <TextView
        android:id="@+id/calendar_screen_recovered_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/calendar_screen_recovered_nb"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/calendar_screen_recovered_txt"
        app:layout_constraintTop_toTopOf="@+id/calendar_screen_recovered_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>